--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
         <div id="result-container">
             <div id="result">Click SPIN to play!</div>
         </div>
+        
+        <div id="audio-permission" style="display: none; margin-top: 20px; padding: 10px; background-color: #ffe6e6; border-radius: 8px; text-align: center;">
+            <p>⚠️ For the best experience with voice narration, please:</p>
+            <ol style="text-align: left; margin: 10px auto; display: inline-block;">
+                <li>Make sure your device sound is on</li>
+                <li>Click anywhere on the page before spinning</li>
+                <li>Allow microphone permissions if prompted</li>
+            </ol>
+            <button id="dismiss-audio-warning" style="background-color: #ff4d4d; color: white; border: none; padding: 5px 10px; border-radius: 4px; cursor: pointer;">Got it!</button>
+        </div>
     </div>
 
     <script src="js/app.js"></script>
