--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
             <p>⚠️ For the best experience with voice narration, please:</p>
             <ol style="text-align: left; margin: 10px auto; display: inline-block;">
                 <li>Make sure your device sound is on</li>
-                <li>Click anywhere on the page before spinning</li>
-                <li>Allow microphone permissions if prompted</li>
+                <li>For iOS devices: tap the "Enable Audio" button below first</li>
+                <li>Then tap SPIN to play the game</li>
             </ol>
+            <button id="enable-audio" style="background-color: #4CAF50; color: white; border: none; padding: 8px 15px; margin: 5px; border-radius: 4px; cursor: pointer;">Enable Audio</button>
             <button id="dismiss-audio-warning" style="background-color: #ff4d4d; color: white; border: none; padding: 5px 10px; border-radius: 4px; cursor: pointer;">Got it!</button>
         </div>
     </div>
