round robin the choices

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 <!-- Wheel segments will be created with JavaScript -->
             </div>
             <div class="spinner-arrow"></div>
+            <div class="princess-pointer">
+                <!-- Princess pointing image added by JavaScript -->
+            </div>
         </div>
         
         <button id="spin-button">SPIN!</button>
